# LettuVault

./: README.md  pyproject.toml  requirements.txt
ai_system/: .gitignore  README.md  data.yaml  pyproject.toml  requirements.txt  train_thesis.py
ai_system/datasets/: README.dataset.txt  README.roboflow.txt  data.yaml
ai_system/src/lettu_vault_ai/: detector.py  test_detector.py
ai_system/src/lettu_vault_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/: .gitignore  pyproject.toml
backend/src/lettu_backend/: test_link.py
backend/src/lettu_backend.egg-info/: PKG-INFO  SOURCES.txt
embedded/: README.md
main/: README.md
mobile/: README.md
