[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lettu_backend"
version = "0.1.0"
description = "FastAPI Backend for LettuVault - Handles Mobile and MQTT communication."
dependencies = [
    "fastapi==0.129.0",
    "uvicorn==0.40.0",
    "paho-mqtt==2.1.0",
    "python-multipart==0.0.22"
]

[tool.setuptools.packages.find]
where = ["src"]